--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "@react-navigation/native": "6.1.14",
+    "@react-navigation/stack": "6.3.25",
+    "react-native-gesture-handler": "2.15.0",
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.29.0",
+    "react-native-vector-icons": "10.0.3",
+    "styled-components": "6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,7 +40,9 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@types/react-native-vector-icons": "6.4.18",
+    "react-native-flipper": "0.212.0"
   },
   "engines": {
     "node": ">=18"
