--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "android:gradle:clean:build": "cd android && ./gradlew clean && ./gradlew build"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.6",
     "@react-navigation/native": "6.1.14",
     "@react-navigation/stack": "6.3.25",
+    "@shopify/flash-list": "1.6.3",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.29.0",
@@ -34,15 +35,15 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-flipper": "0.212.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4",
-    "@types/react-native-vector-icons": "6.4.18",
-    "react-native-flipper": "0.212.0"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
