--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "6.1.14",
     "@react-navigation/stack": "6.3.25",
     "@shopify/flash-list": "1.6.3",
+    "date-fns": "3.5.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
