--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "android:gradle:clean:build": "cd android && ./gradlew clean && ./gradlew build"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.6.2",
     "@react-navigation/native": "6.1.14",
     "@react-navigation/stack": "6.3.25",
     "@shopify/flash-list": "1.6.3",
@@ -22,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
+    "react-native-localize": "3.0.6",
+    "react-native-paper": "5.12.3",
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.29.0",
     "react-native-vector-icons": "10.0.3",
