--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "android:gradle:clean:build": "cd android && ./gradlew clean && ./gradlew build"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.22.3",
     "@react-native-community/datetimepicker": "7.6.2",
     "@react-navigation/native": "6.1.14",
     "@react-navigation/stack": "6.3.25",
+    "@reduxjs/toolkit": "2.2.1",
     "@shopify/flash-list": "1.6.3",
     "date-fns": "3.5.0",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
@@ -28,6 +31,8 @@
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.29.0",
     "react-native-vector-icons": "10.0.3",
+    "react-redux": "9.1.0",
+    "redux-persist": "6.0.0",
     "styled-components": "6.1.8"
   },
   "devDependencies": {
@@ -38,15 +43,18 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/lodash": "4.17.0",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-persist": "4.3.1",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-flipper": "0.212.0",
     "react-test-renderer": "18.2.0",
+    "redux-flipper": "2.0.3",
     "typescript": "5.0.4"
   },
   "engines": {
