--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-bouncy-checkbox": "3.0.7",
     "react-native-gesture-handler": "2.15.0",
     "react-native-localize": "3.0.6",
     "react-native-paper": "5.12.3",
