Update checkbox. Use the one from react-native-paper

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@shopify/flash-list": "1.6.3",
     "date-fns": "3.5.0",
     "lodash": "4.17.21",
+    "patch-package": "8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-bouncy-checkbox": "3.0.7",
     "react-native-gesture-handler": "2.15.0",
     "react-native-localize": "3.0.6",
     "react-native-paper": "5.12.3",
