--- a/ios/ToDoList/Info.plist
+++ b/ios/ToDoList/Info.plist
@@ -36,6 +36,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
