--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "android:gradle:clean": "cd android && ./gradlew clean",
     "android:gradle:build": "cd android && ./gradlew build",
     "android:gradle:clean:build": "cd android && ./gradlew clean && ./gradlew build",
-    "start:mock:server": "json-server --watch src/api/db.json --port 8000"
+    "start:mock:server": "json-server --watch src/api/db.json --port 8000",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.22.3",
     "@react-native-community/datetimepicker": "7.6.2",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "6.1.14",
     "@react-navigation/stack": "6.3.25",
     "@reduxjs/toolkit": "2.2.1",
@@ -25,6 +27,7 @@
     "date-fns": "3.5.0",
     "lodash": "4.17.21",
     "patch-package": "8.0.0",
+    "postinstall-postinstall": "2.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
